# hal-s-compiler

./: .gitignore  README.md  dune-project  hals.opam
docs/: SOURCES.md
examples/: guidance.hal  hello.hal  simple.hal
lib/: ast.ml  dune  lexer.mll  parser.mly
